[project]
name = "wiki-bot"
version = "1.0.0"
description = "用于 Re:从零开始的异世界生活 Wiki 的一些脚本"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "googlesearch-python>=1.3.0",
    "memento-client==0.6.1",
    "mwoauth>=0.4.0",
    "mwparserfromhell>=0.5.2",
    "packaging>=25.0",
    "pillow==10.4.0 ; python_full_version == '3.9.*' and platform_python_implementation == 'PyPy'",
    "pillow==11.3.0 ; python_full_version == '3.10.*' and platform_python_implementation == 'PyPy'",
    "pillow>=10.4.0 ; (python_full_version >= '3.11' and platform_python_implementation != 'GraalVM') or platform_python_implementation == 'CPython'",
    "pydot>=4.0.1",
    "pyjwt!=2.10.0,!=2.10.1",
    "pymysql>=1.1.2",
    "python-stdnum>=2.1",
    "regex>=2025.11.3",
    "requests>=2.31.0",
    "requests-sse>=0.5.2",
    "wikitextparser>=0.56.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.ruff]
extend-exclude = ['pywikibot']
